--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -52,11 +52,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileEditor.cs">
+    <Compile Include="FileGenerator.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FileEditor.Designer.cs">
-      <DependentUpon>FileEditor.cs</DependentUpon>
+    <Compile Include="FileGenerator.Designer.cs">
+      <DependentUpon>FileGenerator.cs</DependentUpon>
     </Compile>
     <Compile Include="IComponent.cs" />
     <Compile Include="Composite.cs" />
@@ -66,8 +66,8 @@
     <Compile Include="FileFactory.cs" />
     <Compile Include="PdfFile.cs" />
     <Compile Include="TextFile.cs" />
-    <EmbeddedResource Include="FileEditor.resx">
-      <DependentUpon>FileEditor.cs</DependentUpon>
+    <EmbeddedResource Include="FileGenerator.resx">
+      <DependentUpon>FileGenerator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
